cfn_benchmark/cfn_templates/kubernetes-retired__kube-aws/e2e/testinfra/stack-template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description:
  kube-aws E2E testing infrastructure
Parameters:
  Id:
    Description: Id of the infrastructure
    Default: kube-aws-e2e-infra
    Type: String
    AllowedPattern: "[a-zA-Z0-9\\-]*"
  AZ1:
    Description: Name of the first AZ
    Default: us-west-1a
    Type: String
    AllowedPattern: "[a-z0-9\\-]*"

Resources:
# Create VPC
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      InstanceTenancy: default
      Tags:
      - Key: Name
        Value: !Join [ "-", [ "Ref":"Id" , "vpc" ] ]

# Create Public RouteTable
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: !Join [ "-", [ "Ref":"Id" , "public" ] ]

# Create Private RouteTable
  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
      - Key: Name
        Value: !Join [ "-", [ "Ref":"Id" , "private" ] ]

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.101.0/24
      AvailabilityZone: !Ref AZ1
      Tags:
      - Key: Name
        Value: !Join [ "-", [ "Ref":"Id" , "public-1" ] ]
  PubSubnetARouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.102.0/24
      AvailabilityZone: !Ref AZ1
      Tags:
      - Key: Name
        Value: !Join [ "-", [ "Ref":"Id" , "public-2" ] ]
  PubSubnetARouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.201.0/24
      AvailabilityZone: !Ref AZ1
      Tags:
      - Key: Name
        Value: !Join [ "-", [ "Ref":"Id" , "private" ] ]
  PriSubnetARouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable

  InternetGateway:
    Type: "AWS::EC2::InternetGateway"
    Properties:
      Tags:
      - Key: Name
        Value: !Join [ "-", [ "Ref":"Id" , "igw" ] ]
  IgwAttach:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway
  RouteToIGW:
    Type: "AWS::EC2::Route"
    DependsOn: InternetGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  NAT:
    DependsOn: IgwAttach
    Type: "AWS::EC2::NatGateway"
    Properties:
      AllocationId: !GetAtt EIP.AllocationId
      SubnetId: !Ref PublicSubnet1
  EIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
  RouteToNAT:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NAT

  PublicELB:
    Type: AWS::ElasticLoadBalancing::LoadBalancer
    Properties:
      Subnets:
      - !Ref PublicSubnet1
      SecurityGroups:
      - !Ref PublicELBSG
      Listeners:
      - LoadBalancerPort: "443"
        InstancePort: "80"
        Protocol: HTTP
      HealthCheck:
        Target:
          Fn::Join:
          - ""
          - - "HTTP:"
            - "80"
            - "/"
        HealthyThreshold: "3"
        UnhealthyThreshold: "5"
        Interval: "30"
        Timeout: "5"
      Tags:
      - Key: Name
        Value: !Join [ "-", [ "Ref":"Id" , "public" ] ]

  PrivateELB:
    Type: AWS::ElasticLoadBalancing::LoadBalancer
    Properties:
      Subnets:
      - !Ref PrivateSubnet1
      SecurityGroups:
      - !Ref PrivateELBSG
      Listeners:
      - LoadBalancerPort: "80"
        InstancePort: "80"
        Protocol: HTTP
      HealthCheck:
        Target:
          Fn::Join:
          - ""
          - - "HTTP:"
            - "80"
            - "/"
        HealthyThreshold: "3"
        UnhealthyThreshold: "5"
        Interval: "30"
        Timeout: "5"
      Tags:
      - Key: Name
        Value: !Join [ "-", [ "Ref":"Id" , "private" ] ]

  TargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: !Join [ "-", [ "Ref":"Id" , "target-group" ] ]
      Port: "80"
      Protocol: HTTP
      HealthCheckIntervalSeconds: "30"
      HealthCheckPort: "80"
      HealthCheckProtocol: HTTP
      HealthCheckPath: "/"
      HealthCheckTimeoutSeconds: "5"
      HealthyThresholdCount: "3"
      UnhealthyThresholdCount: "5"
      VpcId: !Ref VPC

  PrivateELBSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: !Join [ "-", [ "Ref":"Id" , "private-lb" ] ]
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '80'
        ToPort: '80'
        CidrIp: 0.0.0.0/0
      VpcId: !Ref VPC

  PublicELBSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: !Join [ "-", [ "Ref":"Id" , "public-lb" ] ]
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '80'
        ToPort: '80'
        CidrIp: 0.0.0.0/0
      VpcId: !Ref VPC

  PrivateELBBackendSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: !Join [ "-", [ "Ref":"Id" , "private-elb-backend" ] ]
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '80'
        ToPort: '80'
        SourceSecurityGroupId: !Ref PrivateELBSG
      VpcId: !Ref VPC

  PublicALBBackendSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: !Join [ "-", [ "Ref":"Id" , "public-alb-backend" ] ]
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '80'
        ToPort: '80'
        SourceSecurityGroupId: !Ref PublicELBSG
      VpcId: !Ref VPC

  PublicELBBackendSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: !Join [ "-", [ "Ref":"Id" , "public-elb-backend" ] ]
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '80'
        ToPort: '80'
        SourceSecurityGroupId: !Ref PublicELBSG
      VpcId: !Ref VPC

  GlueSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: !Join [ "-", [ "Ref":"Id" , "glue" ] ]
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '80'
        ToPort: '80'
        SourceSecurityGroupId: !Ref ExistingServiceSG
      VpcId: !Ref VPC

  ExistingServiceSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: !Join [ "-", [ "Ref":"Id" , "existing-service" ] ]
      VpcId: !Ref VPC

Outputs:
  VPC:
    Value: !Ref VPC
  PublicSubnet1:
    Value: !Ref PublicSubnet1
  PrivateSubnet1:
    Value: !Ref PrivateSubnet1
  PublicRouteTable:
    Value: !Ref PublicRouteTable
  PrivateRouteTable:
    Value: !Ref PrivateRouteTable
  PublicELBBackendSG:
    Value: !Ref PublicELBBackendSG
  PublicALBBackendSG:
    Value: !Ref PublicALBBackendSG
  PrivateELBBackendSG:
    Value: !Ref PrivateELBBackendSG
  GlueSG:
    Value: !Ref GlueSG
  PublicELB:
    Value: !Ref PublicELB
  PrivateELB:
    Value: !Ref PrivateELB
  TargetGroup:
    Value: !Ref TargetGroup
  PublicELBDNSName:
    Value: !GetAtt PublicELB.DNSName
  PrivateELBDNSName:
    Value: !GetAtt PrivateELB.DNSName
